Fix horizontal scroll 769px - 985px

--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -46,6 +46,7 @@
   line-height: 163%;
   /* or 26px */
   color: #ffffff;
+  margin: 0;
 }
 
 @media screen and (max-width: 768px) {
