--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -28,7 +28,7 @@
 }
 .lead__image {
   filter: grayscale(100%);
-  max-width: 984px;
+  max-width: 100%;
   max-height: 615px;
   margin: 0 0 92px 0;
 }
